[gd_scene load_steps=13 format=3 uid="uid://ckytn4x761qqe"]

[ext_resource type="Script" path="res://scripts/BookOfShaders.gd" id="1"]
[ext_resource type="FontFile" uid="uid://d80tnws1ntvd" path="res://Inconsolata.otf" id="3"]
[ext_resource type="Shader" path="res://shaders/chapter_12/2d-voronoise.gdshader" id="4"]
[ext_resource type="Theme" uid="uid://bmemhxm21ckwb" path="res://DarkTheme.tres" id="5"]
[ext_resource type="Script" path="res://scripts/CodeEdit.gd" id="6_v4gw4"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="7"]

[sub_resource type="BoxMesh" id="3"]

[sub_resource type="Sky" id="6"]

[sub_resource type="Environment" id="7"]
background_mode = 2
sky = SubResource("6")

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("4")
shader_parameter/mouse_position = null

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_amb64"]
number_color = Color(0.400021, 0.747795, 0.41912, 1)
symbol_color = Color(0.631373, 0.741176, 0.937255, 1)
function_color = Color(1, 0.273904, 0.397075, 1)
member_variable_color = Color(0.8, 0.364706, 0.431373, 1)

[node name="Main" type="Node"]

[node name="3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="3D"]
mesh = SubResource("3")

[node name="GimbleY" type="Node3D" parent="3D"]
transform = Transform3D(0.607431, 0, 0.794372, 0, 1, 0, -0.794372, 0, 0.607431, 0, 0, 0)
script = ExtResource("7")

[node name="GimbleX" type="Node3D" parent="3D/GimbleY"]
transform = Transform3D(1, 0, 0, 0, 0.918412, 0.395626, 0, -0.395626, 0.918412, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="3D/GimbleY/GimbleX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="3D"]
environment = SubResource("7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="UI"]
material = SubResource("1")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
color = Color(0.305882, 0.286275, 0.286275, 1)

[node name="CodeEdit" type="CodeEdit" parent="UI"]
layout_mode = 0
anchor_right = 0.5
anchor_bottom = 1.0
focus_mode = 1
theme = ExtResource("5")
theme_override_colors/current_line_color = Color(0.921569, 0.921569, 0.921569, 0.0980392)
theme_override_colors/caret_color = Color(0, 1, 0.533333, 1)
theme_override_colors/caret_background_color = Color(0.929412, 0.0235294, 0.0235294, 1)
theme_override_fonts/font = SubResource("2")
text = "shader_type canvas_item;

// Created by inigo quilez - iq/2013
// License Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
// http://iquilezles.org/www/articles/voronoise/voronoise.htm

uniform vec2 mouse_position;

vec3 hash3( vec2 p ) {
    vec3 q = vec3( dot(p,vec2(127.1,311.7)),
                   dot(p,vec2(269.5,183.3)),
                   dot(p,vec2(419.2,371.9)) );
    return fract(sin(q)*43758.5453);
}

float iqnoise( in vec2 x, float u, float v ) {
    vec2 p = floor(x);
    vec2 f = fract(x);

    float k = 1.0+63.0*pow(1.0-v,4.0);

    float va = 0.0;
    float wt = 0.0;
    for (int j=-2; j<=2; j++) {
        for (int i=-2; i<=2; i++) {
            vec2 g = vec2(float(i),float(j));
            vec3 o = hash3(p + g)*vec3(u,u,1.0);
            vec2 r = g - f + o.xy;
            float d = dot(r,r);
            float ww = pow( 1.0-smoothstep(0.0,1.414,sqrt(d)), k );
            va += o.z*ww;
            wt += ww;
        }
    }

    return va/wt;
}

void fragment() {
	vec2 res = 1.0/SCREEN_PIXEL_SIZE;
	vec2 st = FRAGCOORD.xy/res.xy;
    st.x *= res.x/res.y;
    vec3 color = vec3(0.0);

    st *= 10.;
    float n = iqnoise(st, mouse_position.x/res.x, mouse_position.y/res.y);

    COLOR = vec4(vec3(n),1.0);
}
"
minimap_draw = true
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_amb64")
highlight_current_line = true
gutters_draw_line_numbers = true
script = ExtResource("6_v4gw4")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -423.0
offset_top = 8.0
offset_right = -6.0
offset_bottom = 48.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="SwitchShader" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "Switch Shader"

[node name="CodeToggle" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
toggle_mode = true
shortcut_in_tooltip = false
text = "Edit Code"

[node name="Reset" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "Reset"

[node name="NewShader" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
text = "New Shader"

[node name="2D3D" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5")
shortcut_in_tooltip = false
text = "2D"

[node name="FileDialog" type="FileDialog" parent="UI"]
title = "Open a File"
size = Vector2i(428, 428)
theme = ExtResource("5")
ok_button_text = "Open"
file_mode = 0
access = 1
filters = PackedStringArray("*.gdshader")
show_hidden_files = true

[node name="NewShaderDialog" type="FileDialog" parent="UI"]
size = Vector2i(428, 428)
theme = ExtResource("5")
mode_overrides_title = false
access = 1
filters = PackedStringArray("*.gdshader")
show_hidden_files = true

[connection signal="pressed" from="UI/HBoxContainer/SwitchShader" to="UI" method="_on_SwitchShader_pressed"]
[connection signal="toggled" from="UI/HBoxContainer/CodeToggle" to="UI" method="_on_CodeToggle_toggled"]
[connection signal="pressed" from="UI/HBoxContainer/Reset" to="UI" method="_on_Reset_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/NewShader" to="UI" method="_on_NewShader_pressed"]
[connection signal="button_up" from="UI/HBoxContainer/2D3D" to="UI" method="_on_2D3D_button_up"]
[connection signal="file_selected" from="UI/FileDialog" to="UI" method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="UI/NewShaderDialog" to="UI" method="_on_NewShaderDialog_file_selected"]
